Fix styling issue and HTTP status code response
Fixed styling in static/theme/structure.css to not show overflowing content in the body. Also applied a HTTP status code response change for invalid login attempts to return a 401, rather than a 200.

--- a/src/interface/static/theme/structure.css
+++ b/src/interface/static/theme/structure.css
@@ -191,3 +191,11 @@ tr > td {
 /* * {
     outline: 1px solid var(--text-color);
 } */
+
+
+
+body{
+    overflow: hidden;
+}
+
+/*Welcome to the idiot show... Staring me, the idiot!*/
